@@ -17,5 +17,5 @@ enum Action { Stop, Warning, Information};
 enum Allow { Allow_All, Allow_Number, Allow_Text,Allow_Time,Allow_Date,Allow_Integer,Allow_TextLength};
 enum Series { Column,Row,Linear,Geometric };
 enum MoveTo { Bottom,Left,Top,Right };
-
+enum MethodOfCalc { Sum, Min, Max, Average, Count};
 #endif
